--- a/Gio-hang/history.html
+++ b/Gio-hang/history.html
@@ -36,10 +36,10 @@
                             </a>
                             <ul class="dropdown-menu border-top border-primary border-3"
                                 aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="San-pham-1.html">Chăn</a></li>
-                                <li><a class="dropdown-item" href="San-pham-1.html">Gối</a></li>
-                                <li><a class="dropdown-item" href="San-pham-1.html">Nệm</a></li>
-                                <li><a class="dropdown-item" href="San-pham-1.html">Combo</a></li>
+                                <li><a class="dropdown-item" href="/San-pham/San-pham-1.html">Chăn</a></li>
+                                <li><a class="dropdown-item" href="/San-pham/San-pham-1.html">Gối</a></li>
+                                <li><a class="dropdown-item" href="/San-pham/San-pham-1.html">Nệm</a></li>
+                                <li><a class="dropdown-item" href="/San-pham/San-pham-1.html">Combo</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
