--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase" href="/index.html">Giới thiệu</a>
+                            <a class="nav-link text-uppercase" href="../index.html">Giới thiệu</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link fw-bold dropdown-toggle text-uppercase" href="#" id="navbarDropdown"
@@ -36,21 +36,21 @@
                             </a>
                             <ul class="dropdown-menu border-top border-primary border-3"
                                 aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="San-pham/San-pham-1.html">Chăn</a></li>
-                                <li><a class="dropdown-item" href="San-pham/San-pham-1.html">Gối</a></li>
-                                <li><a class="dropdown-item" href="San-pham/San-pham-1.html">Nệm</a></li>
-                                <li><a class="dropdown-item" href="San-pham/San-pham-1.html">Combo</a></li>
+                                <li><a class="dropdown-item" href="../San-pham/San-pham-1.html">Chăn</a></li>
+                                <li><a class="dropdown-item" href="../San-pham/San-pham-1.html">Gối</a></li>
+                                <li><a class="dropdown-item" href="../San-pham/San-pham-1.html">Nệm</a></li>
+                                <li><a class="dropdown-item" href="../San-pham/San-pham-1.html">Combo</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase" href="/Gio-hang/Gio-hang.html"><i
+                            <a class="nav-link text-uppercase" href="../Gio-hang/Gio-hang.html"><i
                                     class="fas fa-shopping-cart"></i> Giỏ hàng</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase" href="/Gio-hang/history.html"> Lịch sử đơn hàng</a>
+                            <a class="nav-link text-uppercase" href="../Gio-hang/history.html"> Lịch sử đơn hàng</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase" href="login-main/index_login.html" id="login-link">
+                            <a class="nav-link text-uppercase" href="../login-main/index_login.html" id="login-link">
                                 <i class="fas fa-user me-1"></i> Đăng nhập
                             </a>
                         </li>
